@@ -6,4 +6,4 @@ use Test::NoWarnings;
 use WQS::SPARQL::Query::Count;
 
 # Test.
-is($WQS::SPARQL::Query::Count::VERSION, undef, 'Version.');
+is($WQS::SPARQL::Query::Count::VERSION, 0.02, 'Version.');
